# datakenesis-pro

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
src/app/: CMakeLists.txt
